# ZPR

./: README.md
ZPR/: .sconsign.dblite  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  SConstruct.py  Test.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  ZPR  ZPR.cpp  ZPR.h  ZPR.qrc  ZPR.sln  ZPR.ui  ZPR.vcxproj  ZPR.vcxproj.filters  cmake_install.cmake  main.cpp  toTest.h  ui_ZPR.h
ZPR/ZPR_autogen/: mocs_compilation.cpp
ZPR/ZPR_autogen/EWIEGA46WW/: moc_ZPR.cpp  qrc_ZPR.cpp
ZPR/ZPR_autogen/include/: ui_ZPR.h
ZPR/ZPR_autogen/include_Debug/: ui_ZPR.h
ZPR/ZPR_autogen/include_Debug/EWIEGA46WW/: moc_ZPR.cpp
ZPR/ZPR_autogen/include_RelWithDebInfo/EWIEGA46WW/: qrc_ZPR_CMAKE_.cpp
